--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -6,9 +6,9 @@
     <string name="about_dust">Smog</string>
     <string name="about_fog">Nebel</string>
     <string name="about_for_translators">Für Übersetzer:</string>
-    <string name="about_for_translators_text">Wenn du helfen willst diese App in deine Sprache zu übersetzen, gehe einfach auf meine GitHub-Seite (verwende den Button oben) um die Quelldateien zu sehen.</string>
+    <string name="about_for_translators_text">Wenn du helfen willst diese App in deine Sprache zu übersetzen, gehe einfach auf meine GitHub-Seite (verwende den Button oben) um die Quelldateien zu sehen.</string>              
     <string name="about_hailstone">Hagel</string>
-    <string name="about_heavy_snow">Schneegestöber</string>
+    <string name="about_heavy_snow">Schneegestöber</string>    
     <string name="about_light_rain">Nieselregen</string>
     <string name="about_light_snow">Leichter Schneefall</string>
     <string name="about_overcast">Bedeckt</string>
@@ -33,21 +33,21 @@
     <string name="date_format_title">Datumsformat</string>
     <string name="dialog_color_picker">Farbwähler</string>
     <string name="donate">Spenden</string>
-    <string name="donations_button_close">Schließen</string>
-    <string name="donations_description">Findest du diese App nützlich?\nUnterstütze die Entwicklung mit \"Flattr\" oder sende Spenden an den Entwickler!</string>
-    <string name="donations_flattr">Flattr</string>
-    <string name="donations_flattr_description">Flattr erhält 10 % monatliche Gebühr!</string>
-    <string name="donations_google_android_market">Google Play Store</string>
-    <string name="donations_google_android_market_description">Google erhält 30 % von jeder Spende!</string>
-    <string name="donations_google_android_market_donate_button">Spende!</string>
-    <string name="donations_google_android_market_not_supported">In-App-Spenden werden nicht unterstützt. Ist Google Play Store richtig installiert?</string>
-    <string name="donations_google_android_market_not_supported_title">In-App-Spenden werden nicht unterstützt</string>
-    <string name="donations_google_android_market_text">Wie viel?</string>
-    <string name="donations_paypal">PayPal</string>
-    <string name="donations_paypal_description">Du kannst entscheiden wieviel du spenden willst, nachdem du den Button gedrückt hast!</string>
-    <string name="donations_paypal_item_name">In-App-Spende</string>
-    <string name="donations_thanks_dialog">Danke für die Spende!\nIch weiß das sehr zu schätzen!</string>
-    <string name="donations_thanks_dialog_title">Danke!</string>
+    <string name="donations_button_close">Schließen</string> 
+    <string name="donations_description">Findest du diese App nützlich?\nUnterstütze die Entwicklung mit \"Flattr\" oder sende Spenden an den Entwickler!</string> 
+    <string name="donations_flattr">Flattr</string> 
+    <string name="donations_flattr_description">Flattr erhält 10 % monatliche Gebühr!</string> 
+    <string name="donations_google_android_market">Google Play Store</string> 
+    <string name="donations_google_android_market_description">Google erhält 30 % von jeder Spende!</string> 
+    <string name="donations_google_android_market_donate_button">Spende!</string> 
+    <string name="donations_google_android_market_not_supported">In-App-Spenden werden nicht unterstützt. Ist Google Play Store richtig installiert?</string> 
+    <string name="donations_google_android_market_not_supported_title">In-App-Spenden werden nicht unterstützt</string> 
+    <string name="donations_google_android_market_text">Wie viel?</string> 
+    <string name="donations_paypal">PayPal</string> 
+    <string name="donations_paypal_description">Du kannst entscheiden wieviel du spenden willst, nachdem du den Button gedrückt hast!</string> 
+    <string name="donations_paypal_item_name">In-App-Spende</string> 
+    <string name="donations_thanks_dialog">Danke für die Spende!\nIch weiß das sehr zu schätzen!</string>    
+    <string name="donations_thanks_dialog_title">Danke!</string> 
     <string name="donations_yandex">Yandex.Money (RU)</string>
     <string name="end_time_title">Ende</string>
     <string name="fetching_location">Ermittle deine Position\u2026</string>
@@ -65,7 +65,7 @@
     <string name="forecast_flurries">Böen</string>
     <string name="forecast_fog">Nebel</string>
     <string name="forecast_freezing_drizzle">Gefrierender Niesel</string>
-    <string name="forecast_freezing_rain">Gefrierender Regen</string>
+	<string name="forecast_freezing_rain">Gefrierender Regen</string>
     <string name="forecast_hail">Hagel</string>
     <string name="forecast_haze">Nebel</string>
     <string name="forecast_heavy_rain">Starker Regen</string>
@@ -81,7 +81,7 @@
     <string name="forecast_rain">Regen</string>
     <string name="forecast_rain_and_snow">Regen und Schnee</string>
     <string name="forecast_rain_showers">Regenfälle</string>
-    <string name="forecast_sand">Sand</string>
+	<string name="forecast_sand">Sand</string>
     <string name="forecast_scattered_showers">Auflockernde Regenfälle</string>
     <string name="forecast_scattered_thunderstorms">Auflockerndes Gewitter</string>
     <string name="forecast_showers">Regenfälle</string>
@@ -89,17 +89,17 @@
     <string name="forecast_smoke">Rauch</string>
     <string name="forecast_snow">Schnee</string>
     <string name="forecast_snow_showers">Schneeschauer</string>
-    <string name="forecast_snow_storm">Schneesturm</string>
+	<string name="forecast_snow_storm">Schneesturm</string>
     <string name="forecast_sunny">Sonnig</string>
     <string name="forecast_thunderstorm">Gewitter</string>
     <string name="forecast_windy">Sturm</string>
     <string name="just_now">Gerade eben</string>
-    <string name="loading">Lade\u2026</string>
+    <string name="loading">Lade\u2026</string> 
     <string name="location_edit">Name der Stadt</string>
     <string name="location_gps">Aktueller Ort</string>
     <string name="location_list">Orte</string>
     <string name="location_search">Ortssuche</string>
-    <string name="main_screen_text_color_summary">Textfarbe der wichtigsten Daten auf der Anzeige</string>
+    <string name="main_screen_text_color_summary">Textfarbe der wichtigsten Daten auf der Anzeige</string> 
     <string name="menu">Menü</string>
     <string name="menu_hourly">Stündlich</string>
     <string name="menu_locations">Orte</string>
@@ -120,13 +120,13 @@
     <string name="moon_waxingcrescent">Zunehmender Halbmond</string>
     <string name="moon_waxinggibbous">Zunehmender Dreiviertelmond</string>
     <string name="network_error">Verbindung mit dem Server fehlgeschlagen</string>
-    <string name="new_version">Neue Version</string>
+    <string name="new_version">Neue Version</string> 
     <string name="no_provider">Positionierung nicht möglich\nWähle den Ort selbst aus</string>
     <string name="no_weather_provider">Kein MIUI-Wetteranbieter gefunden</string>
-    <string name="not_now">Nicht jetzt</string>
+    <string name="not_now">Nicht jetzt</string> 
     <string name="ok">OK</string>
-    <string name="press_color_to_apply">Zum Anwenden die Farbe berühren</string>
-    <string name="pressure_units">Druckeinheit</string>
+    <string name="press_color_to_apply">Zum Anwenden die Farbe berühren</string> 
+    <string name="pressure_units">Druckeinheit</string> 
     <string name="pressure_units_mb">" hPa"</string>
     <string name="pressure_units_mmhg">" mmHg"</string>
     <string name="quiet_hours_enabled">Ruhestunden ein</string>
@@ -140,7 +140,7 @@
     <string name="settings_category_app_update">Anwendungsupdate</string>
     <string name="settings_category_appearance">Allgemein</string>
     <string name="settings_category_appearance_sum">Einheiten, Textfarbe etc.</string>
-    <string name="settings_category_forecast_update">Aktualisierung der Vorhersage</string>
+    <string name="settings_category_forecast_update">Aktualisierung der Vorhersage</string>    
     <string name="settings_category_miui">MIUI ROMs</string>
     <string name="settings_category_miui_sum">MIUI-Supporteinstellungen (Unterstützung ein/aus, Datenbereinigung etc.)</string>
     <string name="settings_category_network">Netzwerkeinstellungen</string>
@@ -150,13 +150,13 @@
     <string name="settings_category_update_sum">Einstellungen für automatisches Aktualisieren und Intervalle</string>
     <string name="settings_category_widgets">Widget-Einstellungen</string>
     <string name="settings_category_widgets_sum">Widget-Darstellung und Widget-Aktionen</string>
-    <string name="settings_check_updates_summary">Prüfe auf Aktualisierung beim Anwendungsstart</string>
+    <string name="settings_check_updates_summary">Prüfe auf Aktualisierung beim Anwendungsstart</string>    
     <string name="settings_check_updates_title">Prüfe auf Aktualisierung</string>
     <string name="settings_click_actions">Berührungseinstellungen</string>
     <string name="settings_miui_support_summary">Einschalten um native MIUI-Widgets zu unterstützen</string>
     <string name="settings_miui_support_title">MIUI-Widget-Unterstützung</string>
     <string name="settings_miui_v5_summary">Einschalten wenn du ein MIUI v5 ROM verwendest</string>
-    <string name="settings_miui_v5_title">MIUI v5 ROM</string>
+    <string name="settings_miui_v5_title">MIUI v5 ROM</string>    
     <string name="settings_moon_phases_title">Mondphasen</string>
     <string name="settings_notification_color_title">Benachrichtigungssymbolfarbe</string>
     <string name="settings_notification_summary">Zeige aktuelle Wetterbedingungen im Benachrichtigungsbereich</string>
@@ -182,9 +182,9 @@
     <string name="settings_widgets_click_weather_summary">App die gestartet wird, wenn die Wettervorhersage (Temperatur) am Widget berührt wird</string>
     <string name="settings_widgets_click_weather_title">Berühren der Wettervorhersage</string>
     <string name="settings_widgets_widget4x1">Widget 4x1</string>
-    <string name="settings_widgets_widget4x1_data_title">Detailierte Daten</string>
-    <string name="settings_widgets_widget4x1_transparent_sum">Nicht ausgewählt für Standardhintergrund</string>
-    <string name="settings_widgets_widget4x1_transparent_title">Transparenter Hintergrund</string>
+    <string name="settings_widgets_widget4x1_data_title">Detailierte Daten</string>    
+    <string name="settings_widgets_widget4x1_transparent_sum">Nicht ausgewählt für Standardhintergrund</string> 
+    <string name="settings_widgets_widget4x1_transparent_title">Transparenter Hintergrund</string> 
     <string name="settings_widgets_widget4x1_v5">Widget 4x1 (v5)</string>
     <string name="settings_widgets_widget4x2">Widget 4x2</string>
     <string name="settings_widgets_widget4x2_city_font_summary">Standardeinstellung 22sp</string>
@@ -211,9 +211,9 @@
     <string name="temperature_units">Temperatureinheit</string>
     <string name="temperature_units_c">Celsius</string>
     <string name="temperature_units_f">Fahrenheit</string>
-    <string name="text_color_title">Textfarbe</string>
+    <string name="text_color_title">Textfarbe</string> 
     <string name="updating">Aktualisiere\u2026</string>
-    <string name="upgrade">Upgrade</string>
+    <string name="upgrade">Upgrade</string> 
     <string name="visibility_units">Längeneinheit</string>
     <string name="visibility_units_km">" km"</string>
     <string name="visibility_units_m">" m"</string>
@@ -233,25 +233,25 @@
     <string name="widget_name_4x1">(4x1) Wetter BZ</string>
     <string name="widget_name_4x1_ext">(4x1 Ext) Wetter BZ</string>
     <string name="widget_name_4x1_v5">(4x1 v5) Wetter BZ</string>
-    <string name="widget_text_color_summary">Textfarbe des Widgets</string>
-    <string name="wind_e">O</string>
+    <string name="widget_text_color_summary">"Textfarbe des Widgets"</string> 
+    <string name="wind_e">O</string> 
     <string name="wind_ene">O-NO</string>
     <string name="wind_ese">O-SO</string>
-    <string name="wind_n">N</string>
-    <string name="wind_ne">NO</string>
-    <string name="wind_nne">N-NO</string>
-    <string name="wind_nnw">N-NW</string>
-    <string name="wind_nw">NW</string>
-    <string name="wind_s">S</string>
-    <string name="wind_se">SO</string>
-    <string name="wind_speed_units">Geschwindigkeitseinheit</string>
+    <string name="wind_n">N</string>    
+    <string name="wind_ne">NO</string>  
+    <string name="wind_nne">N-NO</string> 
+    <string name="wind_nnw">N-NW</string> 
+    <string name="wind_nw">NW</string> 
+    <string name="wind_s">S</string> 
+    <string name="wind_se">SO</string> 
+    <string name="wind_speed_units">Geschwindigkeitseinheit</string>   
     <string name="wind_speed_units_kmph">" km/h"</string>
     <string name="wind_speed_units_mph">" mph"</string>
     <string name="wind_speed_units_mps">" m/s"</string>
     <string name="wind_sse">S-SO</string>
-    <string name="wind_ssw">S-SW</string>
-    <string name="wind_sw">SW</string>
-    <string name="wind_variable">Wechselnd</string>
+    <string name="wind_ssw">S-SW</string> 
+    <string name="wind_sw">SW</string> 
+    <string name="wind_variable">Wechselnd</string>  
     <string name="wind_w">W</string>
     <string name="wind_wnw">W-NW</string>
     <string name="wind_wsw">W-SW</string>
