--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -14,7 +14,7 @@
     <string name="about_light_rain">Слабый дождь</string>
     <string name="about_sleet">Мокрый снег</string>
     <string name="about_blizzard">Метель</string>
-    <string name="about_snow_showers">Слабый снег</string>
+    <string name="about_snow_showers">Легкий снег</string>
     <string name="about_heavy_snow">Снегопад</string>
     <string name="about_moderate_snow">Снег</string>
     <string name="about_light_snow">Слабый снег</string>
@@ -41,20 +41,12 @@
     <string name="dialog_color_picker">Выбор цвета</string>
     <string name="donate">Пожертвование</string>
     <string name="donations_button_close">Закрыть</string>
-    <string name="donations_description">Считаете ли вы приложение полезным?\nПоддержите разработчика через flattr или отправьте пожертвование через Google Play Store!</string>
-    <string name="donations_flattr">Flattr</string>
-    <string name="donations_flattr_description">Flattr взимает 10% в виде ежемесячной абонентской платы!</string>
-    <string name="donations_google_android_market">Google Play Store</string>
-    <string name="donations_google_android_market_description">Google взимает 30% с каждого пожертвования!</string>
-    <string name="donations_google_android_market_donate_button">Пожертвовать!</string>
-    <string name="donations_google_android_market_not_supported">Пожертвования через приложение не поддерживаются. Google Play Store установлен правильно?</string>
-    <string name="donations_google_android_market_not_supported_title">Пожертвования через приложение не поддерживаются</string>
-    <string name="donations_google_android_market_text">Сколько?</string>
+    <string name="donations_description">Считаете ли вы приложение полезным?\nПоддержите его разработку, отправив пожертвование разработчику!"</string>
+    <string name="donations_thanks_dialog">Благодарю за пожертвование!\nЯ очень это ценю!</string>
+    <string name="donations_thanks_dialog_title">Благодарю!</string>
     <string name="donations_paypal">PayPal</string>
     <string name="donations_yandex">Яндекс.Деньги</string>
-    <string name="donations_paypal_description">После нажатия на кнопку вы можете выбрать сколько хотите пожертвовать!</string>
-    <string name="donations_thanks_dialog">Благодарю за пожертвование! Я очень это ценю!</string>
-    <string name="donations_thanks_dialog_title">Благодарю!</string>
+    <string name="donations_paypal_description">После нажатия на кнопку вы сможете выбрать сколько хотите пожертвовать!</string>
     <string name="end_time_title">Конец</string>
     <string name="fetching_location">Определение местоположения…</string>
     <string name="forecast_chance_of_rain">Возможен дождь</string>
@@ -96,7 +88,7 @@
     <string name="forecast_sleet">Мокрый снег</string>
     <string name="forecast_smoke">Дым</string>
     <string name="forecast_snow">Снег</string>
-    <string name="forecast_snow_showers">Ливни со снегом</string>
+    <string name="forecast_snow_showers">Легкий снег</string>
     <string name="forecast_snow_storm">Метель</string>
     <string name="forecast_sunny">Солнечно</string>
     <string name="forecast_thunderstorm">Гроза</string>
@@ -177,10 +169,14 @@
     <string name="settings_miui_v5_title">Прошивка MIUI v5</string>
     <string name="settings_moon_phases_title">Фазы луны</string>
     <string name="settings_notification_color_title">Цвет символа уведомления</string>
+    <string name="settings_notification_hourly_view">Почасовой прогноз</string>
+    <string name="settings_notification_hourly_view_summary">Почасовой прогноз в расширенном уведомлении</string>
     <string name="settings_notification_summary">Отображать прогноз погоды в области уведомлений</string>
     <string name="settings_notification_text_color_summary">Цвет текста и иконки уведомления</string>
     <string name="settings_notification_title">Уведомление о погоде</string>
     <string name="settings_notification_type">Тип уведомления</string>
+    <string name="settings_notification_statusbar_summary">Показывать уведомление в статусной строке</string>
+    <string name="settings_notification_statusbar_title">Уведомление в статусбаре</string>
     <string name="settings_show_info_summary">Показывать или скрыть элементы интерфейса</string>
     <string name="settings_show_info_title">Отображение данных</string>
     <string name="settings_time_format_12h">12-часовой формат</string>
