update romanian translation

--- a/res/values-ro/strings.xml
+++ b/res/values-ro/strings.xml
@@ -22,19 +22,19 @@
     <string name="about_hailstone">Grindină</string>
     <string name="about_haze">Ceaţă</string>
     <string name="about_for_translators">Pentru traducători:</string>
-    <string name="about_for_translators_text">Dacă doriți să ajutaţi la traducerea acestei aplicații în altă limbă, mergeţi la pagina mea de github (folosind butonul de mai sus) pentru a vizualiza toate resursele</string>
+    <string name="about_for_translators_text">Dacă doriți să ajutaţi la traducerea acestei aplicații în altă limbă, accesaţi pagina mea github (utilizând butonul de mai sus) pentru a vizualiza toate resursele</string>
     <string name="about_social">Reţele sociale:</string>
     <string name="action_bar_selected_format">Selectat: %d</string>
     <string name="app_name">Meteo BZ</string>
     <string name="applying_theme">Aplicare temă\u2026</string>
-    <string name="btn_add_location">Adăugaţi locaţia</string>
+    <string name="btn_add_location">Adăugaţi o locaţie</string>
     <string name="btn_apply_theme">Aplicaţi tema</string>
     <string name="btn_delete_location">Ştergeţi locaţia</string>
     <string name="cancel">Anulaţi</string>
     <string name="clear_miui_data">Eliminaţi datele MIUI meteo</string>
     <string name="clear_miui_data_dialog">Eliminaţi MIUI meteo</string>
     <string name="clear_miui_data_dialog_ask">Eliminaţi baza de date MIUI meteo?</string>
-    <string name="clear_miui_data_dialog_text">Baza de date MIUI meteo eliminată!</string>
+    <string name="clear_miui_data_dialog_text">Baza de date MIUI meteo a fost eliminată!</string>
     <string name="clear_miui_data_summary">Eliminaţi baza de date MIUI meteo</string>
     <string name="close">Închideţi</string>
     <string name="date_format_title">Format dată</string>
@@ -144,7 +144,7 @@
     <string name="not_now">Nu acum</string>
     <string name="ok">OK</string>
     <string name="press_color_to_apply">Apăsaţi pe culoare pentru a aplica</string>
-    <string name="pressure_units">Unităţi presiune</string>
+    <string name="pressure_units">Unităţi pentru presiune</string>
     <string name="quiet_hours_enabled">Activaţi orele de linişte</string>
     <string name="quiet_hours_enabled_on">Ore de linişte activate</string>
     <string name="quiet_hours_enabled_off">Actualizările vor funcționa în mod normal</string>
@@ -176,13 +176,17 @@
     <string name="settings_miui_v5_summary">Activaţi dacă aveţi instalat MIUI v5</string>
     <string name="settings_miui_v5_title">MIUI v5</string>
     <string name="settings_moon_phases_title">Fazele lunii</string>
-    <string name="settings_notification_color_title">Culoare simbol bară de stare</string>
+    <string name="settings_notification_color_title">Culoarea simbolului în bara de stare</string>
+    <string name="settings_notification_hourly_view">Vremea pe ore</string>
+    <string name="settings_notification_hourly_view_summary">Afişaţi vremea pe ore în modul extins</string>
     <string name="settings_notification_summary">Afişaţi condiţiile meteo curente în zona de notificare</string>
-    <string name="settings_notification_text_color_summary">Culoare pictogramă şi text notificare</string>
+    <string name="settings_notification_text_color_summary">Culoarea pictogramei şi textului notificării</string>
     <string name="settings_notification_title">Afişaţi notificarea</string>
     <string name="settings_notification_type">Tip notificare</string>
+    <string name="settings_notification_statusbar_summary">Afişaţi notificarea în bara de stare</string>
+    <string name="settings_notification_statusbar_title">Notificare în bara de stare</string>
     <string name="settings_show_info_summary">Afişaţi sau ascundeţi elemente de interfață</string>
-    <string name="settings_show_info_title">Afişaţi informaţii</string>
+    <string name="settings_show_info_title">Afişare informaţii</string>
     <string name="settings_time_format_12h">Format 12 ore</string>
     <string name="settings_update_autoupdate_summary">Actualizare automată a prognozei meteo</string>
     <string name="settings_update_autoupdate_title">Actualizare automată</string>
@@ -230,16 +234,16 @@
     <string name="settings_widgets_widget4x3_hourly_view">Prognoză din oră în oră</string>
     <string name="share">Distribuiţi</string>
     <string name="share_content">\#WeatherBZ#</string>
-    <string name="share_weather_content">"\#WeatherBZ# Azi în %1$s %2$s, %3$s, %4$s. Actualizată %5$s."</string>
-    <string name="share_weather_title">Partajaţi datele despre vreme</string>
-    <string name="save_screen_shot_failed">Salvare screenshot eşuată</string>
+    <string name="share_weather_content">"\#WeatherBZ# Azi în este %1$s %2$s, %3$s, %4$s. Actualizată la %5$s."</string>
+    <string name="share_weather_title">Distribuiţi datele meteo</string>
+    <string name="save_screen_shot_failed">Salvare eşuată a capturei de ecran</string>
     <string name="start_time_title">Început</string>
-    <string name="temperature_units">Unităţi temperatură</string>
+    <string name="temperature_units">Unităţi pentru temperatură</string>
     <string name="text_color_title">Culoare text</string>
     <string name="theme_author">"Autor: "</string>
     <string name="theme_date">"Dată: "</string>
-    <string name="theme_import_dialog_title">Selectaţi o temă pt. a o importa</string>
-    <string name="theme_import_no_filemanager">Instalaţi un manager de fişiere.</string>
+    <string name="theme_import_dialog_title">Selectaţi o temă pentru a o importa</string>
+    <string name="theme_import_no_filemanager">Instalaţi un manager de fişiere</string>
     <string name="theme_import_not_theme">Nu este fişier temă!</string>
     <string name="theme_version">"Versiune: "</string>
     <string name="themes_temperature_icons">Pictograme temperatură</string>
@@ -247,12 +251,12 @@
     <string name="themes_weather_icons">Pictograme vreme</string>
     <string name="updating">Actualizare\u2026</string>
     <string name="upgrade">Upgrade</string>
-    <string name="visibility_units">Unităţi vizibilitate</string>
+    <string name="visibility_units">Unităţi pentru vizibilitate</string>
     <string name="visibility_units_mi">" mile"</string>
     <string name="weather_feel">"Se simte a fi: "</string>
     <string name="weather_humidity">"Umiditate: "</string>
     <string name="weather_no_city">Nici un oraş</string>
-    <string name="weather_no_data">Nu există date despre vreme</string>
+    <string name="weather_no_data">Datele meteo lipsesc</string>
     <string name="weather_pressure">"Presiune: "</string>
     <string name="weather_sunrize">"Răsărit: "</string>
     <string name="weather_sunset">"Apus: "</string>
@@ -275,7 +279,7 @@
     <string name="wind_nw">NV</string>
     <string name="wind_s">S</string>
     <string name="wind_se">SE</string>
-    <string name="wind_speed_units">Unităţi viteză vânt</string>
+    <string name="wind_speed_units">Unităţi pentru viteza vântului</string>
     <string name="wind_sse">SSE</string>
     <string name="wind_ssw">SSV</string>
     <string name="wind_sw">SV</string>
